--- a/index.html
+++ b/index.html
@@ -47,24 +47,20 @@
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
-
       <!-- Wrapper for slides -->
       <div class="container">
         <div class="carousel-inner">
           <div class="item active">
-            <img src="pictures/circuitcropped.png" alt="Los Angeles">
+            <img src="pictures/circuitcropped.png" alt="Derp">
           </div>
-
           <div class="item">
-            <img src="pictures/circuitcropped.png" alt="Chicago">
+            <img src="pictures/circuitcropped.png" alt="Derp">
           </div>
-
           <div class="item">
-            <img src="pictures/circuitcropped.png" alt="New York">
+            <img src="pictures/circuitcropped.png" alt="Derp">
           </div>
         </div>
       </div>
-
       <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
@@ -76,9 +72,25 @@
       </a>
     </div>
 
-    <footer class="footer card">
-      <div class="container">
-        <a href="https://github.com/Andreln/" target=_blank title="Github Repository" style="text-decoration:none"> <img src="logos/logo_github.png" style="width:10%" > </img> </a>
+    <div class="container">
+      <div class="page-header w3-border-bottom w3-border-light-grey">
+        <h3>Projects</h3>
+      </div>
+      <div class="row text-center">
+        <div class="container col-sm-6">
+          test
+        </div>
+        <div class="container col-sm-6">
+          test
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container text-center">
+        <p class="text-muted">André Nicolaysen - andrenicolaysen@gmail.com</p>
       </div>
     </footer>
 
@@ -86,5 +98,7 @@
     <!-- Bootstrap core JavaScript - Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
   </body>
+
 </html>
