--- a/index.html
+++ b/index.html
@@ -84,7 +84,24 @@
           test
         </div>
       </div>
+    </div>
 
+    <div class="container">
+      <div class="page-header w3-border-bottom w3-border-light-grey">
+        <h3>About</h3>
+      </div>
+        <div class="container">
+          test
+        </div>
+    </div>
+
+    <div class="container">
+      <div class="page-header w3-border-bottom w3-border-light-grey">
+        <h3>Contact</h3>
+      </div>
+        <div class="container">
+          test
+        </div>
     </div>
 
     <!-- Footer -->
