--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="container text-center">
+      <div class="container text-center card">
         <p class="text-muted">André Nicolaysen - andrenicolaysen@gmail.com</p>
       </div>
     </footer>
